# apx-gcs

./: .clang-format  .clang-format-ignore  .cmake-format.yaml  .gitignore  .gitmodules  .license.tmpl  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  COPYING.md  Docker.mk  Dockerfile  Makefile  README  README.md  Release.mk  Tools.mk  app.pri  common.pri  compile_commands.json  deploy.pri  deploy.qbs  gcs.pri  gcs.pro  gcs.qbs  localization.pri  sdk_package.qbs
docs/: Docs.mk  (+1 more)
src/Plugins/MapView/ElevationMap/: CMakeLists.txt  ElevationDB.cpp  ElevationDB.h  ElevationMap.cpp  ElevationMap.h  ElevationPlugin.h  README.md
src/Plugins/MapView/ElevationMap/qml/: ElevationChart.qml  ElevationPlugin.qml  ElevationView.qml  WaypointsChart.qml
src/Plugins/System/: CMakeLists.txt  System.qbs
src/Plugins/System/AppUpdate/: AppImageAutoUpdater.cpp  AppImageAutoUpdater.h  AppUpdate.cpp  AppUpdate.h  AppUpdate.qbs  AppUpdateChecker.cpp  AppUpdateChecker.h  AppUpdatePlugin.h  CMakeLists.txt  README.md  Updater.cpp  Updater.h  UpdaterPlugin.h
src/Plugins/System/AppUpdate/Darwin/: SparkleAutoUpdater.h  SparkleAutoUpdater.mm
src/Plugins/System/AppUpdate/Linux/: AppImageAutoUpdater.cpp  AppImageAutoUpdater.h  AppImageAutoUpdater.qml
src/Plugins/System/AppUpdate/appimage/: AppImageAutoUpdater.cpp  AppImageAutoUpdater.h
src/Plugins/System/AppUpdate/linux/: AppImageAutoUpdater.cpp  AppImageAutoUpdater.h
src/Plugins/System/AppUpdate/macos/: SparkleAutoUpdater.mm
src/Plugins/System/AppUpdate/qml/: AppImageAutoUpdater.qml  AppUpdate.qml  Updater.qml
src/Plugins/System/Blackbox/: Blackbox.cpp  Blackbox.h  Blackbox.qbs  BlackboxFile.cpp  BlackboxFile.h  BlackboxItem.cpp  BlackboxItem.h  BlackboxNode.cpp  BlackboxNode.h  BlackboxPlugin.h  BlackboxReader.cpp  BlackboxReader.h
src/Plugins/System/DatalinkInspector/: DatalinkInspector.cpp  DatalinkInspector.h  DatalinkInspectorListModel.cpp  DatalinkInspectorListModel.h  TerminalListModel.cpp  TerminalListModel.h
src/Plugins/System/DatalinkInspector/qml/: Terminal.qml  TerminalExec.qml
src/Plugins/System/FirmwareLoader/: CMakeLists.txt  Firmware.cpp  Firmware.h  FirmwareLoader.qbs  FirmwarePlugin.h  FirmwareSelect.cpp  FirmwareSelect.h  FirmwareTools.cpp  FirmwareTools.h  Format.cpp  Format.h  Initialize.cpp  Initialize.h  Loader.cpp  Loader.h  LoaderStm.cpp  LoaderStm.h  QueueItem.cpp  QueueItem.h  README.md  Releases.cpp  Releases.h
src/Plugins/System/HttpService/: CMakeLists.txt  HttpService.cpp  HttpService.h  HttpServicePlugin.h  README.md
src/Plugins/System/Joystick/: CMakeLists.txt  Joystick.cpp  Joystick.h  Joystick.qbs  JoystickAxis.cpp  JoystickAxis.h  JoystickPlugin.h  Joysticks.cpp  Joysticks.h  README.md
src/Plugins/System/MeasurementSystem/: MeasurementSystem.cpp  MeasurementSystem.h  MeasurementSystemPlugin.h  README.md
src/Plugins/System/Notifications/: Notifications.cpp  Notifications.h  Notifications.qbs  NotificationsPlugin.h  NotifyItem.cpp  NotifyItem.h
src/Plugins/System/Notifications/qml/: NotificationsPlugin.qml
src/Plugins/System/ProtocolBackport/: ProtocolBackport.cpp  ProtocolBackport.h  ProtocolBackport.qbs  ProtocolBackportPlugin.h  ProtocolV9.cpp  ProtocolV9.h
src/Plugins/System/ScriptCompiler/: CMakeLists.txt  README.md  ScriptCompiler.cpp  ScriptCompiler.h  ScriptCompiler.qbs  ScriptCompilerPlugin.h
src/Plugins/System/Shortcuts/: CMakeLists.txt  README.md  Shortcut.cpp  Shortcut.h  Shortcuts.cpp  Shortcuts.h  Shortcuts.qbs  ShortcutsPlugin.h
src/Plugins/System/Shortcuts/qml/: EditorKey.qml  Shortcuts.qml  ShortcutsPlugin.qml
src/Plugins/System/Simulator/: CMakeLists.txt  README.md  SimMod.cpp  SimMod.h  SimMods.cpp  SimMods.h  SimPlugin.h  Simulator.cpp  Simulator.h  Simulator.qbs
src/Plugins/System/Simulator/xplane/: CMakeLists.txt  plugin.cpp  xplane.qbs
src/Plugins/System/Sounds/: CMakeLists.txt  README.md  Sounds.cpp  Sounds.h  Sounds.qbs  SoundsPlugin.h
src/Plugins/System/Terminal/: README.md  Terminal.cpp  Terminal.h  Terminal.qbs  TerminalListModel.cpp  TerminalListModel.h  TerminalPlugin.h
src/Plugins/System/Terminal/qml/: Terminal.qml  TerminalExec.qml  TerminalLine.qml  TerminalMenuItem.qml  TerminalPlugin.qml
src/Plugins/System/VideoStreaming/: StreamingPlugin.h  gstplayer.cpp
src/Plugins/System/_Blackbox/: Blackbox.cpp  Blackbox.h  BlackboxFile.cpp  BlackboxFile.h  BlackboxItem.cpp  BlackboxItem.h  BlackboxNode.cpp  BlackboxNode.h  BlackboxPlugin.h  BlackboxReader.cpp  BlackboxReader.h
src/Plugins/System/_Notifications/: Notifications.cpp  Notifications.h  NotificationsPlugin.h  NotifyItem.cpp  NotifyItem.h
src/Plugins/System/_ProtocolBackport/: ProtocolBackport.cpp  ProtocolBackportPlugin.h  ProtocolV9.cpp  ProtocolV9.h
src/Plugins/Tools/VideoStreaming/: CMakeLists.txt  QmlAnimationDriver.cpp  QmlAnimationDriver.h  QmlOverlay.cpp  QmlOverlay.h  QmlOverlayMain.cpp  QmlOverlayMain.h  QmlRenderer.cpp  QmlRenderer.h  README.md  StreamingPlugin.h  VideoStreaming.qbs  gstplayer.cpp  gstplayer.h  overlay.cpp  overlay.h  videothread.cpp  videothread.h
src/Plugins/Windows/TelemetryChart/: CMakeLists.txt  README.md  TelemetryChart.qbs  TelemetryFrame.cpp  TelemetryFrame.h  TelemetryPlot.cpp  TelemetryPlot.h  TelemetryPlugin.h
src/lib/ApxFw/: ApxFw.cpp  ApxFw.h  ApxFw.qbs  CMakeLists.txt  GithubReleases.cpp  GithubReleases.h
src/lib/ApxFw/quazip/: unzip.c  zip.c
src/main/: AppProperties.cpp  AppProperties.h  AppShortcuts.cpp  AppShortcuts.h  CMakeLists.txt  Config.cpp  Config.h  Config.ui  Info.plist  MainForm.cpp  MainForm.h  QJoystick.cpp  QJoystick.h  RunGuard.cpp  RunGuard.h  app-Info.plist  main.cpp  main.pro  main.qbs  test.cpp
src/main/qml/: qtquickcontrols2.conf
src/main/qml/app/: AboutDialog.qml  Activities.qml  ActivityBar.qml  ApxApp.qml  ApxAppMain.qml  ApxAppMainMenuBarLinux.qml  ApxAppMainMenuBarMacos.qml  EFIS.qml  GroundControl.qml  HDG.qml  InstrumentsLayout.qml  InstrumentsPanel.qml  JSBrowser.qml  MainLayout.qml  MenuBarMacos.qml  MenuCommands.qml
src/main/qml/shaders/: map.fsh  vignette.fsh
src/main/shaders/: vignette.frag
(+2482 files in other folders)
