add_subdirectory("Terminal")
add_subdirectory("Sounds")
add_subdirectory("Simulator")
add_subdirectory("Shortcuts")
add_subdirectory("ScriptCompiler")
add_subdirectory("FirmwareLoader")
add_subdirectory("Joystick")

if(CMAKE_BUILD_TYPE STREQUAL "Release" OR APPLE)
    add_subdirectory("AppUpdate")
endif()
